# am-rate-bot

./: .gitignore  Cargo.toml  Dockerfile  Makefile  PRIVACY.md  README.md  compose.polling.yaml  compose.webhook.yaml  docker-compose.yaml
.github/workflows/: docker-push.yml  rust.yml
config/: .gitignore  bot.env  config.toml  nginx.conf  src.toml
src/: bot.rs  collector.rs  config.rs  database.rs  db.rs  gen.rs  generate.rs  generator.rs  graph.rs  lib.rs  main.rs
src/source/: acba.rs  aeb.rs  alfa_by.rs  ardshin.rs  ardshininvest.rs  arm_swiss.rs  armsoft.rs  artsakh.rs  avosend.rs  cb.rs  cb_am.rs  converse.rs  evoca.rs  fast.rs  hsbc.rs  idbank.rs  idpay.rs  ineco.rs  kwikpay.rs  lsoft.rs  mellat.rs  mir.rs  mod.rs  moex.rs  sas.rs  unionpay.rs  unistream.rs  vtb.rs  vtb_am.rs
src/sources/: acba.rs  aeb.rs  alfa_by.rs  ameria.rs  amio.rs  ararat.rs  ardshin.rs  arm_swiss.rs  armsoft.rs  artsakh.rs  artsakh_uni.rs  avosend.rs  byblos.rs  cb_am.rs  cba.rs  converse.rs  evoca.rs  fast.rs  hsbc.rs  idbank.rs  idpay.rs  ineco.rs  kwikpay.rs  lsoft.rs  mellat.rs  mir.rs  mod.rs  moex.rs  moneytun.rs  sas.rs  uni.rs  unibank.rs  unistream.rs  utils.rs  vtb.rs  vtb_am.rs
