[package]
name = "am-rate-bot"
version = "0.8.0"
edition = "2021"
authors = ["lucky"]

[dependencies]
argh = "0.1"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

teloxide = { version = "0.13.0", features = ["macros"] }
quick-xml = { version = "0.36.2", features = ["serialize"] }

# sugar
strum = { version = "0.26.3", features = ["derive"] }
# sas source html parser
select = "0.6.0"
