[package]
name = "am-rate-bot"
version = "0.12.0"
edition = "2021"
authors = ["lucky"]

[dependencies]
argh = "0.1"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

teloxide = { version = "0.13.0", features = ["macros", "webhooks-axum"] }
quick-xml = { version = "0.36.2", features = ["serialize"] }
rust_decimal = { version = "1.36.0", features = ["serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.36.0"

# sugar
strum = { version = "0.26.3", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display"] }

thiserror = "1.0"
anyhow = "1.0"

# hsbc/sas source html parser
select = "0.6.0"
