[package]
name = "am-rate-bot"
version = "0.21.0"
edition = "2021"
authors = ["lucky"]

[dependencies]
toml = "0.8"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
teloxide = { version = "0.13", features = ["macros", "webhooks-axum", "throttle"] }
quick-xml = { version = "0.36", features = ["serialize"] }
rust_decimal = { version = "1.36", features = ["serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.36"
chrono = "0.4"

# sugar
strum = { version = "0.26", features = ["derive"] }
derive_more = { version = "1.0", features = ["display"] }
thiserror = "1.0"
anyhow = "1.0"

# vtb_am/hsbc/sas src html parser
select = "0.6.0"
